Extend TopN to support multiple sort columns (ESQL-471)
ESQL-452 requires sorting with tie breaker which is currently not supported.

This PR extends `TopNOperator` to support an arbitrary number of sort
orders.